More dark mode fixes

--- a/resources/css/components/quick-scan.css
+++ b/resources/css/components/quick-scan.css
@@ -574,6 +574,10 @@
     opacity: 0.6;
 }
 
+[data-theme="dark"] .loading--wrap {
+    background-color: var(--c-bg-dark);
+}
+
 .loading--wrap.loading--large {
     min-height: 150px;
 }
@@ -592,7 +596,7 @@
     width: 100%;
     /* border-radius: 10px; */
     height: 100%;
-    background-color: var(--c-gray-100);
+    background-color: var(--c-gray-50);
     opacity: 0.4;
     position: absolute;
     animation: slide 2s infinite;
